--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,14 @@ img{
   background-image: linear-gradient(135.06deg, #a2a7f0 -0.05%, #696edd 100.05%);;
 }
 
+.pricing-plan-best .pricing-plan-list{
+  border-color: rgb(255, 255, 255, 0.25)
+}
+
+.pricing-plan-best .pricing-plan-list-item{
+  border-color: rgb(255, 255, 255, 0.25);
+}
+
 .pricing-plan:first{
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
