--- a/style/style.css
+++ b/style/style.css
@@ -64,6 +64,67 @@ img{
   font-size: 32px;
 }
 
+.switch{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.switch-control{
+  position: relative;
+  width: 56px;
+  height: 32px;
+  border-radius: 16px;
+  padding: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+  background-color: #696edd;
+  background-image:  linear-gradient(135deg, #a2a7F0 0%, #696edd 100%);
+}
+
+.switch-control-annual,
+.switch-control-monthly{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.switch-inpput-annual:checked ~ .switch-control .switch-control-monthly,
+.switch-inpput-monthly:checked ~ .switch-control .switch-control-annual{
+  z-index: 5;
+}
+
+.switch-inpput-monthly:checked ~ .switch-control .switch-circle{
+  margin-left: 24px;
+}
+
+
+.switch-circle{
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: margin 0.4s ease;
+}
+
+/* .switch-control:hover .switch-circle{
+  margin-left: 24px;
+
+} */
+
+.pricing-switch{
+  margin-bottom: 64px;
+}
+
+.switch-label{
+  font-size: 15px;
+  line-height: 18px;
+  color: rgb(110, 114, 142, 0.5) ;
+}
+
 .pricing {
   width: 100%;
 }
